[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paybridge"
version = "0.1.0"
description = "Unified payment gateway integration for Python"
readme = "dev.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.setuptools]
include-package-data = true
packages = ["paybridge"]
