[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paybridge"
version = "0.1.3"
description = "Unified payment gateway integration for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["paybridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test_error_handling.py"]
addopts = "-v --tb=short"
